test/fail/lib/not-static.mo
assert "This is not a static files"
